# claude-code-in-100-lines

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: llm.py  loader.py  main.py  memory.py  tools.py
src/prompts/agent/: subagent_prompt.md  system_prompt.md
src/prompts/skills/code-review/: SKILL.md
src/prompts/skills/git-commit/: SKILL.md
