[project]
name = "build-your-own-harness"
version = "0.1.0"
description = "A minimal educational agent framework that exposes the LLM agent loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.6.2",
]

[project.scripts]
harness = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
